- 12.0 (2023-04-11):
    - Removed support for Zabbix 5.0, 5.2 & 5.4.

- 11.0 (2023-03-17):
    - Added support for Zabbix 6.4.

- 10.0 (2022-07-05):
    - Added support for Zabbix 6.2.

- 9.0 (2022-01-26):
    - Added support for Zabbix 6.0.

- 8.0 (2021-11-29):
    - Stopped assuming all preprocessing steps require a single parameter.

- 7.0 (2021-07-08):
    - Avoided JavaScript precision issues when filtering is not needed.

- 6.0 (2021-07-07):
    - Added {$REDIS_SENTINEL.LLD_EXCLUDED_SUBJECTS} and {$REDIS_SERVER.LLD_EXCLUDED_SUBJECTS} for filtering LLD items based on {#SUBJECT}.
    - Added {$REDIS_SENTINEL.EXCLUDED_STATS} and {$REDIS_SERVER.EXCLUDED_STATS} for filtering entries in the master item.

- 5.0 (2021-07-05):
    - Removed graphs.

- 4.0 (2021-05-25):
    - Dropped support for Zabbix 4.x. BEWARE UUIDs of triggers (not trigger prototypes) will change.
    - Restored unused triggers.

- 3.0 (2021-05-24):
    - Added support for Zabbix 5.4. BEWARE custom UUIDs are used (i.e. history will be lost when manually upgrading the template).
    - 'App' tag renamed to 'Application'.

- 2.0 (2020-11-19):
    - Added support for Zabbix 5.2.

- 1.0 (2020-05-14):
    - Initial release.