@@ -1,3 +1,6 @@
+- ?:
+    - Resolve warnings on Github Actions workflow and include script on releases.
+
 - 12.0 (2023-04-11):
     - Removed support for Zabbix 5.0, 5.2 & 5.4.
 
